Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.7.4 (MM/DD/YYYY):
	General:
	* Fix search path for Tk when compiling on Debian Squeeze. (#12465)

version 2.7.3 (08/10/2010):
	General:
	* Use silent build rules for automake >1.11. You can enable verbose
	  builds with the --disable-silent-rules configure option, or using
	  make V=1.

	libpurple:
	* Fix the TURN server settings (broken in 2.7.0).

	Pidgin:
	* Re-focus the input area after clicking the attention toolbar button.
	* Re-arrange media window to make it more netbook-friendly.

	Finch:
	* Rebindable 'suggest-next-page' and 'suggest-prev-page' actions for
	  textboxes (GntEntry) to scroll through list of suggestions.
	* Rebindable 'dropdown' action for comboboxes (GntComboBox) to show the
	  dropdown list of options.

	IRC:
	* Fix non-ASCII arguments to /mode et al.  (thanks to Max Ulidtko)

	MSN:
	* Support for web-based buddy icons, used when a buddy logs in to the
	  messenger on the Live website.
	* Fix file transfers with some clients that don't support direct
	  connections (e.g., papyon, telepathy-butterfly, etc.) (#12150)

	MXit:
	* Fix filename for the Shocked emoticon. (#12364)
	* Implement the new naming conventions where possible. (MXitId, etc)
	* Display a message in the Groupchat window when you invite somebody.
	* Birthday field in profile cannot be edited when server says it is
	  locked.
	* If a buddy is offline, show in their profile when last they were online.
	* Handle pushed profile update packets (ie, when changing your avatar via
	  the Gallery bot).
	* If a buddy is offline and we see from their profile that they have
	  updated their avatar, request the new avatar image from the server.
	* Fix a possible crash if a link is clicked while disconnected.
	* Unescape any escaped characters in a chatroom nickname.
	* Add the new MXit moods and emoticons.
	* MXit emoticons added to the small emoticon theme.

	XMPP: